further testing of commits, uncommented html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 
-<!-- <section class = "fishList">
+<section class = "fishList">
   <h1>Fish List</h1>
   <ul>
     <li>Goldfish</li>
@@ -18,7 +18,7 @@
     <li>Tuna</li>
     <li>Salmon</li>
   </ul>
-</section> -->
+</section>
 
 <aside>
   <section class = fishTips>
